modules/k8s/env/k3s/jenkins/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/path: /
    prometheus.io/port: '8080'
spec:
  selector:
    app: jenkins
  type: NodePort
  ports:
  - name: httpport
    port: 8080
    targetPort: 8080
    nodePort: 31013
  - name: jnlpport
    port: 50000
    targetPort: 50000
